<resources>
    <string name="app_name">内贸航运</string>
    <string name="login_user_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_label">登录</string>
    <string name="register_balel">注册</string>
    <string name="forget_password_label">忘记密码？</string>
    <string name="tab_message_label">消息</string>
    <string name="tab_home_label">首页</string>
    <string name="tab_me_label">我的</string>
    <string name="settings_title">设置</string>
    <string name="message_dialog_is_opend">标为已读</string>
    <string name="message_dialog_not_opend">标为未读</string>
    <string name="message_dialog_remove">移除</string>
    <string name="message_top_category_label_open">∧</string>
    <string name="message_top_category_label_close">∨</string>
    <string name="item_oil_request">燃油申请</string>
    <string name="item_oil_request_detail">燃油申请明细</string>
    <string name="add_oil_report_label">新增燃油动态</string>
    <string name="add_oil_request_label">新增燃油申请</string>
    <string name="query_oil_report_label">查看燃油动态</string>
    <string name="query_oil_request_label">查看燃油申请</string>
    <string name="query_oil_report_detail_label">查看燃油动态明细</string>
    <string name="query_oil_request_detail_label">查看燃油申请明细</string>

    <string name="add_oil_request_detail_label">新增燃油申请明细</string>
    <string name="add_oil_report_detail_label2">燃油动态明细（必填）</string>
    <string name="add_oil_report_detail_label">新增燃油动态明细</string>
    <string name="item_oil_report_history">燃油动态</string>
    <string name="item_oil_report_history_detail">燃油上报历史详情</string>
    <string name="item_oil_request_history">燃油申请历史</string>
    <string name="item_oil_request_history_detail">燃油申请历史详情</string>
    <string name="item_ship">船舶动态</string>
    <string name="item_plan">航次计划</string>
    <string name="item_search_goods">货物查询</string>
    <string name="item_search_goods_detail">货物运输详情</string>
    <string name="network_error">网络连接错误，请检查网络!</string>
    <string name="type_light_oil">轻油（吨）</string>
    <string name="type_heavy_oil">重油（吨）</string>
    <string name="type_machine_oil">机油（桶）</string>
    <string name="btn_commit_label">提交</string>
    <string name="start_voyage_label">点击开始本航次</string>
    <string name="already_start_voyage_label">航次执行中</string>
    <string name="end_voyage_label">点击结束本航次</string>
    <string name="already_end_voyage_label">航次已结束</string>
    <string name="start_voyage_button_warning">航次已开始，请知悉！</string>
    <string name="start_voyage_button_warning2">请先结束未结束的航次计划！</string>
    <string name="end_voyage_button_warning">航次已结束，请知悉！</string>
    <string name="end_voyage_button_warning2">航次还未执行完，不能结束航次，请知悉！</string>
    <string name="end_voyage_button_warning3">航次还未开始，请知悉！</string>
    <string name="choice_label">选择</string>
    <string name="more_popup_menu_item_current">目前油耗</string>
    <string name="more_popup_menu_item_history">历史油耗</string>
    <string name="time_label">时间</string>
    <string name="location_label">位置</string>
    <string name="location_hint_label">请选择你的位置</string>
    <string name="ship_name_label">船名</string>
    <string name="ship_type_label">类型</string>
    <string name="ship_voyage_no_label">航次号</string>
    <string name="apply_reason_label">申请理由</string>
    <string name="apply_company_label">申请公司</string>
    <string name="supply_name_label">供应商</string>
    <string name="pay_method_label">付款方式</string>
    <string name="money_type_label">币种</string>
    <string name="is_advance_label">是否预付款</string>
    <string name="advance_money_label">预付金额</string>
    <string name="yes_label">是</string>
    <string name="no_label">否</string>
    <string name="cancel_label">取消</string>
    <string name="sure_label">确定</string>
    <!--申请明细-->
    <string name="fuelKind_label">品种</string>
    <string name="taxId_label">税种</string>
    <string name="taxRate_label">税率</string>
    <string name="estimateQty_label">预计数量</string>
    <string name="estimatePrice_label">预计单价</string>
    <string name="estimateAmount_label">预计总价</string>
    <string name="actualQty_label">实际加油量</string>
    <string name="actualPrice_label">实际结算单价(含税)</string>
    <string name="actualAmount_label">实际结算金额(含税)</string>
    <string name="settleId_label">结算单据编号</string>
    <string name="tax_label">税金</string>
    <string name="taxFreeAmount_label">实际金额（不含税)</string>
    <!--燃油上报-->
    <string name="voyagePlanStatus_label">航次状态</string>
    <string name="voyageStatus_label">当前状态</string>
    <string name="longitude_label">经度</string>
    <string name="latitude_label">纬度</string>
    <string name="add_oil_data_label">待报燃油动态</string>
    <string name="history_oil_data_label">已报燃油动态</string>
    <string name="history_oil_data_detail_label">已报燃油动态详情</string>
    <!--燃油上报明细-->
    <string name="unit_value_ton">吨</string>
    <string name="unit_value_bucket">桶</string>
    <string name="unit_label">计量单位</string>
    <string name="realStoreQty_label">现有油量</string>
    <string name="realyAmount_label">现有金额</string>
    <string name="taxfreeRealyAmount_label">现有金额(不含税)</string>
    <string name="addFuelQty_label">本次加油量</string>
    <string name="addAmount_label">本次加油金额</string>
    <string name="taxfreeAddAmount_label">本次加油金额(不含税)</string>
    <string name="consumeQuantity_label">本航次累计消耗量</string>
    <string name="taxfreeConsumeQuantity_label">累计消耗金额(不含税)</string>
    <string name="consumeAmount_label">累计消耗金额(含税)</string>

    <string name="no_data_warn">无数据</string>
    <string name="error_data_warn">数据异常</string>
    <string name="no_network_warn">网络异常</string>
    <string name="commit_success_msg">提交成功</string>
    <string name="end_voyage_plan_success_msg">本航次已结束</string>
    <string name="commit_fail_msg">提交失败</string>

    <!--航次计划-->
    <string name="ship_plan_detail_title">航次计划详情</string>
    <string name="voyageNo_label">航次号</string>
    <string name="routeName_label">线路名称</string>
    <string name="fStatus_label">状态</string>
    <string name="owerCompName_label">公司名称</string>
    <string name="shipCompName_label">船公司名称</string>
    <string name="rentType_label">租用类型</string>
    <string name="distance_label">线路距离</string>
    <string name="ask_if_exit">信息还未提交或保存，是否退出？</string>
    <string name="add_oil_amount_hint_label">请输入数据</string>
    <string name="add_money_hint_label">请输入</string>
    <string name="add_oil_dialog_title">是否提交以下信息？</string>
    <string name="port_sort_label">码头顺序</string>
    <string name="dynamic_label">动态跟踪列表</string>

    <string name="report_ship_plan_label">汇报详情</string>
    <string name="portName_label2">码头</string>
    <string name="portName_label">码头名称</string>
    <string name="jobTypeValue_label">作业类型</string>
    <string name="voyageStatusDesc_label">航次状态</string>
    <string name="estimatedTime_label">预计时间</string>
    <string name="occurTime_label">发生时间</string>
    <string name="reportTime_label">报告时间</string>
    <string name="reason_label">原因</string>
    <string name="speed_label">速度(节)</string>
    <string name="weather_label">天气</string>
    <string name="feedback_label">反馈信息</string>
    <string name="remark_label">备注</string>
    <string name="speed_hint">请填写速度</string>
    <string name="weather_hint">请填写天气</string>
    <string name="reason_hint">请填写原因</string>
    <string name="feedback_hint">请填写反馈信息</string>
    <string name="remark_hint">请填写备注</string>
    <string name="actualSailingTime_hint">请选择实际起航时间</string>

    <!--货物查询-->

    <string name="roughWeight_label">毛重</string>
    <string name="resourcesNum_label">资源号</string>
    <string name="cargoName_label">品名</string>
    <string name="numbers_label">数量</string>
    <string name="load_status_label">状态</string>
    <string name="baleNum_label">捆包号</string>
    <string name="consigneeUnit_label">收货人单位</string>
    <string name="contractNo_label">合同号</string>
    <string name="linkman_label">联系人</string>
    <string name="phone_label">联系人电话</string>
    <string name="spec_label">规格</string>

    <string name="loading_label">正在运</string>
    <string name="unLoad_label">未开始</string>
    <string name="loaded_label">已运完</string>
    <string name="choice_goods_status_label">选择货物运输状态</string>

    <string name="ic_email">&#xe087;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_folder">&#xe09d;</string>

    <string name="command_label">操作</string>
    <string name="command_report_label">汇报</string>
    <string name="command_look_label">查看</string>
    <string name="exception_label">报异常</string>

    <string name="add_voyage_plan_label">新增动态跟踪</string>
    <string name="voyage_plan_detail_label">动态跟踪详情</string>

    <string name="start_voyage_plan_label">开始航次计划</string>
    <string name="end_voyage_plan_label">结束航次计划</string>

    <string name="actualSailingTime_label">实际起航时间</string>
    <string name="estimatedSailingTime_label">预计起航时间</string>
    <string name="actualStopTime_label">实际止航时间</string>
    <string name="estimatedStopTime_label">预计止航时间</string>
    <string name="portTransportOrder_label">航次顺序</string>

    <string name="select_time_label">请选择时间</string>
    <string name="select_voyage_start_time_label">请选择航次开始时间</string>
    <string name="no_report_oil_label">没有可待报燃油的航次计划</string>
    <string name="release_version">正式版</string>
    <string name="debug_version">测试版</string>
</resources>
