<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="@dimen/add_oil_dialog_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/add_oil_dialog_margin"
        android:paddingRight="@dimen/add_oil_dialog_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_item_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:text="提交信息"/>
        <LinearLayout
            android:layout_marginTop="@dimen/add_oil_dialog_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/portName_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/portName_label"/>

            <TextView
                android:id="@+id/jobTypeValue_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/jobTypeValue_label"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/add_oil_dialog_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/voyageStatusDesc_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/voyageStatusDesc_label"/>

            <TextView
                android:id="@+id/estimatedTime_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/estimatedTime_label"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/add_oil_dialog_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/occurTime_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/occurTime_label"/>

            <TextView
                android:id="@+id/reportTime_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/reportTime_label"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/add_oil_dialog_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reason_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/reason_label"/>

            <TextView
                android:id="@+id/location_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/location_label"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/add_oil_dialog_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/longitude_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/longitude_label"/>
            <TextView
                android:id="@+id/latitude_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/latitude_label"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/add_oil_dialog_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/speed_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/speed_label"/>

            <TextView
                android:id="@+id/weather_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/weather_label"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/add_oil_dialog_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/feedback_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/feedback_label"/>

            <TextView
                android:id="@+id/remark_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="提交信息"
                tools:text="@string/remark_label"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/add_oil_dialog_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@color/alpha30"
            android:textColor="@color/white"
            android:text="@string/cancel_label"
            android:gravity="center"
            android:padding="@dimen/add_oil_dialog_item_margin"/>
        <View
            android:visibility="gone"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black_33"/>

        <TextView
            android:id="@+id/sure_tv"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:layout_weight="1.0"
            android:text="@string/sure_label"
            android:gravity="center"
            android:padding="@dimen/add_oil_dialog_item_margin"/>
    </LinearLayout>

</LinearLayout>