<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dip"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginLeft="@dimen/oil_report_history_list_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/loadPort_tv"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_18"
                android:text="起运港"/>
            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgreen"
                android:textSize="@dimen/text_size_18"
                android:text="→"/>
            <TextView
                android:id="@+id/unloadPort_tv"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_18"
                android:text="目的港"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/baleNum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/baleNum_label"
            android:textColor="@color/main_title_text_color"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/main_text_size"/>
        <TextView
            android:id="@+id/cargoName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cargoName_label"
            android:textColor="@color/main_title_text_color"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/main_text_size"/>
        <TextView
            android:id="@+id/resourcesNum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resourcesNum_label"
            android:textColor="@color/main_title_text_color"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/main_text_size"/>

        <TextView
            android:id="@+id/contractNo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contractNo_label"
            android:textColor="@color/main_title_text_color"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/main_text_size"/>

        <TextView
            android:id="@+id/roughWeight_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/roughWeight_label"
            android:textColor="@color/main_title_text_color"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/main_text_size"/>

        <TextView
            android:id="@+id/spec_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spec_label"
            android:textColor="@color/main_title_text_color"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/main_text_size"/>

        <TextView
            android:id="@+id/isLoad_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/load_status_label"
            android:textColor="@color/main_title_text_color"
            android:textSize="@dimen/main_text_size"/>
    </LinearLayout>
    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorPrimary"/>
</LinearLayout>
