<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_reward_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F9F9F9"
        android:orientation="vertical">
        <TextView
            android:id="@+id/yes_type_tv"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_info_popup_item_height"
            android:text="@string/yes_label"
            android:gravity="center"
            android:textColor="@color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_info_popup_line_height"/>
        <TextView
            android:id="@+id/no_type_tv"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_info_popup_item_height"
            android:text="@string/no_label"
            android:gravity="center"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/cancel_tv"
            android:layout_marginTop="@dimen/my_info_popup_item_cancel_margin"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_info_popup_item_height"
            android:text="@string/cancel_label"
            android:gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>
    <TextView
        android:id="@+id/pop_title_tv"
        android:layout_above="@id/pop_reward_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="标题"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="@dimen/my_info_popup_title_margin"/>
</RelativeLayout>