<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <include layout="@layout/activity_login_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/login_linear_margin"
        android:layout_marginRight="@dimen/login_linear_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!--logo-->
        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_logo_margin_top"/>
        <EditText
            android:id="@+id/user_et"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:drawablePadding="@dimen/login_edit_padding"
            android:layout_marginTop="@dimen/login_user_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/login_user_icon"
            android:hint="@string/login_user_hint"
            android:background="@null"/>
        <View
            android:layout_marginTop="@dimen/login_divede_line_margin"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <EditText
            android:id="@+id/password_et"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_marginTop="@dimen/login_password_margin_top"
            android:drawablePadding="@dimen/login_edit_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/login_password_icon"
            android:hint="@string/login_password_hint"
            android:background="@null"
            android:inputType="textPassword"/>
        <View
            android:layout_marginTop="@dimen/login_divede_line_margin"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/forget_password_tv"
            android:layout_marginTop="@dimen/login_password_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_label"
            android:textColor="@color/red"/>

        <Button
            android:id="@+id/login_bt"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/login_btn_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_login_button_off"
            android:text="@string/login_label"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
